; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_sigbus.c_sigbus_reset.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_sigbus.c_sigbus_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@n_installed = common dso_local global i64 0, align 8
@SIGBUS = common dso_local global i32 0, align 4
@old_sigaction = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sigbus_reset() #0 {
  %1 = load i64, i64* @n_installed, align 8
  %2 = icmp sle i64 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %16

4:                                                ; preds = %0
  %5 = load i64, i64* @n_installed, align 8
  %6 = add nsw i64 %5, -1
  store i64 %6, i64* @n_installed, align 8
  %7 = load i64, i64* @n_installed, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %4
  %10 = load i32, i32* @SIGBUS, align 4
  %11 = call i64 @sigaction(i32 %10, i32* @old_sigaction, i32* null)
  %12 = icmp eq i64 %11, 0
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert_se(i32 %13)
  br label %15

15:                                               ; preds = %9, %4
  br label %16

16:                                               ; preds = %15, %3
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i64 @sigaction(i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
